# rfid-security-toolkit

./: .gitignore  DEVLOG.md  README.md  pyproject.toml
docs/: AUTHORIZED_USE.md
lab_sim/: ATTACK_SIMULATIONS.md  MITIGATION_PLAYBOOK.md  README.md
lab_sim/data/: sample_weak.eml
src/mifare_analyzer/: __init__.py  acl.py  cli.py  default_keys.py  dump_parser.py  key_audit.py  manufacturer.py
src/rfid_wiegand_sniffer/: __init__.py  cli.py  gpio_sniffer.py  security_notes.py  wiegand.py
